--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <head>
   <title>TicTacToe</title>
   <script type="text/javascript" src="./js/app.js"></script>
-  <link href='http://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Slabo+27px' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="./css/reset.css">
   <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
